📝 Server (v0.9.1): Updated Swagger File
